Fix leak of nsMarkedJSFunctionHolder so that its destructor now cleans up a dangling pointer.  b=345660  r+sr=sicking